force-app/main/default/objects/Case_Supplier__c/Case_Supplier__c.object-meta.xml
<CustomObject>
    <label>Case Supplier</label>
    <nameField>
        <displayFormat>CS{0000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>