force-app/main/default/objects/Case_Supplier__c/fields/Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amount__c</fullName>
    <inlineHelpText>Provides the total bid amount based on the supplier&apos;s tender response. N.B This will need to be populated by the procurement lead following evaluations</inlineHelpText>
    <label>Bid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>