force-app/main/default/objects/Case_Supplier__c/fields/Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status__c</fullName>
    <description>Holds status of supplier bid for this procurement</description>
    <inlineHelpText>Provides a status for the suppliers bid i.e Not Invited, Submitted Tender, Did not Submit, Submitted - Non- Compliant, Submitted - Lost, Winning Supplier</inlineHelpText>
    <label>Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Invited</fullName>
            </value>
            <value>
                <fullName>Submitted Tender</fullName>
            </value>
            <value>
                <fullName>Did not Submit</fullName>
            </value>
            <value>
                <fullName>Submitted - Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Submitted - Lost</fullName>
            </value>
            <value>
                <fullName>Winning Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>