force-app/main/default/objects/Case_Supplier__c/fields/Case_Supplier_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Supplier_External_Id__c</fullName>
    <description>External Id (Not generated by Salesforce) used for reference during upsert in data migration.</description>
    <externalId>true</externalId>
    <label>Case Supplier External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>