force-app/main/default/objects/Case_Supplier__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Record reasons why a particular supplier, invited to tender, declined to do so
So we can monitor/report on the reasons for non-bids.</description>
    <inlineHelpText>Record reasons why a particular supplier, invited to tender, declined to do so</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>