force-app/main/default/objects/Case_Supplier__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Suppliers</relationshipLabel>
    <relationshipName>Case_Suppliers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>